[gd_scene load_steps=4 format=2]

[ext_resource path="res://motion_ai/common/tasking/core/TaskTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://motion_ai/common/tasking/WanderRandom.gd" type="Script" id=2]
[ext_resource path="res://motion_ai/common/tasking/actions/MoveToPosition.tscn" type="PackedScene" id=3]


[node name="WanderRandom" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="MoveToPosition" parent="." index="0" instance=ExtResource( 3 )]
[connection signal="action_failure" from="MoveToPosition" to="." method="_on_MoveToPosition_action_failure"]
[connection signal="action_success" from="MoveToPosition" to="." method="_on_MoveToPosition_action_success"]
